--- a/.github/workflows/cmake.yaml
+++ b/.github/workflows/cmake.yaml
@@ -3,11 +3,11 @@ name: CMake Build Matrix
 # Controls when the action will run. 
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-
+  #push:
+  #  branches: [ main ]
+  #pull_request:
+  #  branches: [ main ]
+  # 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -26,25 +26,9 @@ jobs:
       matrix:
         config:
         - {
-            name: "Windows Latest MSVC", artifact: "Windows-MSVC.7z",
-            os: windows-latest,
-            cc: "cl", cxx: "cl",
-            environment_script: "C:/Program Files (x86)/Microsoft Visual Studio/2019/Enterprise/VC/Auxiliary/Build/vcvars64.bat"
-          }
-        - {
-            name: "Windows Latest MinGW", artifact: "Windows-MinGW.7z",
-            os: windows-latest,
-            cc: "gcc", cxx: "g++"
-          }
-        - {
             name: "Ubuntu Latest GCC", artifact: "Linux.7z",
             os: ubuntu-latest,
             cc: "gcc", cxx: "g++"
-          }
-        - {
-            name: "macOS Latest Clang", artifact: "macOS.7z",
-            os: macos-latest,
-            cc: "clang", cxx: "clang++"
           }
 
     steps:
@@ -230,9 +214,9 @@ jobs:
 
 
     - name: Pack
-      working-directory: instdir
-      run: cmake -E tar cfv ../${{ matrix.config.artifact }} --format=7zip .
-
+      #working-directory: instdir
+      #run: cmake -E tar cfv ../${{ matrix.config.artifact }} --format=7zip .
+      run: find . 
 
     - name: Upload
       uses: actions/upload-artifact@v1
