--- a/.github/workflows/cmake.yaml
+++ b/.github/workflows/cmake.yaml
@@ -216,7 +216,8 @@ jobs:
     - name: Pack
       #working-directory: instdir
       #run: cmake -E tar cfv ../${{ matrix.config.artifact }} --format=7zip .
-      run: find . 
+      #run: find . 
+      run: cmake -E tar cfv ./${{ matrix.config.artifact }} --format=7zip build
 
     - name: Upload
       uses: actions/upload-artifact@v1
